feature: 将 Msg.class 更名为 Result.class，避免歧义

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>mp-common</module>
         <module>mp-uid</module>
         <module>mp-connect</module>
+        <module>mp-msg-acceptor</module>
     </modules>
 
     <properties>
