--- a/mp-common/mp-common-msg/pom.xml
+++ b/mp-common/mp-common-msg/pom.xml
@@ -3,23 +3,24 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>mp-common</artifactId>
-    <version>1.0</version>
-    <packaging>pom</packaging>
     <parent>
-        <artifactId>MessagePusher</artifactId>
         <groupId>cn.wtk</groupId>
+        <artifactId>mp-common</artifactId>
         <version>1.0</version>
     </parent>
-    <modules>
-        <module>mp-common-base</module>
-        <module>mp-common-database</module>
-        <module>mp-common-security</module>
-        <module>mp-common-msg</module>
-    </modules>
+
+    <artifactId>mp-common-msg</artifactId>
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>cn.wtk</groupId>
+            <artifactId>mp-common-base</artifactId>
+        </dependency>
+    </dependencies>
 </project>
