feature: 消息重传 MsgResendHandler

--- a/mp-msg-acceptor/pom.xml
+++ b/mp-msg-acceptor/pom.xml
@@ -22,5 +22,13 @@
             <groupId>cn.wtk</groupId>
             <artifactId>mp-common-base</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.wtk</groupId>
+            <artifactId>mp-common-msg</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.wtk</groupId>
+            <artifactId>mp-common-security</artifactId>
+        </dependency>
     </dependencies>
 </project>
