--- a/mp-relation/pom.xml
+++ b/mp-relation/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0</version>
     </parent>
 
-    <artifactId>mp-msg-acceptor</artifactId>
+    <artifactId>mp-relation</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -24,15 +24,12 @@
         </dependency>
         <dependency>
             <groupId>cn.wtk</groupId>
-            <artifactId>mp-common-msg</artifactId>
+            <artifactId>mp-common-database</artifactId>
         </dependency>
         <dependency>
             <groupId>cn.wtk</groupId>
             <artifactId>mp-common-security</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-stream-kafka</artifactId>
-        </dependency>
     </dependencies>
+
 </project>
