--- a/mp-msg-acceptor/pom.xml
+++ b/mp-msg-acceptor/pom.xml
@@ -24,7 +24,7 @@
         </dependency>
         <dependency>
             <groupId>cn.wtk</groupId>
-            <artifactId>mp-common-msg</artifactId>
+            <artifactId>mp-common-database</artifactId>
         </dependency>
         <dependency>
             <groupId>cn.wtk</groupId>
