feature: msg-relation CRUD

--- a/mp-relation/pom.xml
+++ b/mp-relation/pom.xml
@@ -30,6 +30,12 @@
             <groupId>cn.wtk</groupId>
             <artifactId>mp-common-security</artifactId>
         </dependency>
+        <!--测试-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
