--- a/mp-common/mp-common-base/pom.xml
+++ b/mp-common/mp-common-base/pom.xml
@@ -17,6 +17,10 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+        </dependency>
         <!-- hutool 工具包-->
         <dependency>
             <groupId>cn.hutool</groupId>
