--- a/mp-common/mp-common-base/pom.xml
+++ b/mp-common/mp-common-base/pom.xml
@@ -17,10 +17,6 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.mapstruct</groupId>
-            <artifactId>mapstruct</artifactId>
-        </dependency>
         <!-- hutool 工具包-->
         <dependency>
             <groupId>cn.hutool</groupId>
@@ -136,7 +132,11 @@
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
-
+        <!-- mapstruct -->
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
