--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <jasypt.version>3.0.4</jasypt.version>
         <hutool.version>5.8.11</hutool.version>
         <mapstruct.version>1.4.2.Final</mapstruct.version>
+        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -84,12 +85,12 @@
                 <scope>import</scope>
             </dependency>
 
-<!--            &lt;!&ndash; 配置文件加密 &ndash;&gt;-->
-<!--            <dependency>-->
-<!--                <groupId>com.github.ulisesbocchio</groupId>-->
-<!--                <artifactId>jasypt-spring-boot-starter</artifactId>-->
-<!--                <version>${jasypt.version}</version>-->
-<!--            </dependency>-->
+            <!--            &lt;!&ndash; 配置文件加密 &ndash;&gt;-->
+            <!--            <dependency>-->
+            <!--                <groupId>com.github.ulisesbocchio</groupId>-->
+            <!--                <artifactId>jasypt-spring-boot-starter</artifactId>-->
+            <!--                <version>${jasypt.version}</version>-->
+            <!--            </dependency>-->
 
             <dependency>
                 <groupId>org.mapstruct</groupId>
@@ -144,4 +145,41 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.1</version>
+                    <configuration>
+                        <source>1.8</source> <!-- depending on your project -->
+                        <target>1.8</target> <!-- depending on your project -->
+                        <annotationProcessorPaths>
+                            <!-- 为了 MapStruct 引入如下三个插件 -->
+                            <!-- MapStruct 注解处理器 -->
+                            <path>
+                                <groupId>org.mapstruct</groupId>
+                                <artifactId>mapstruct-processor</artifactId>
+                                <version>${mapstruct.version}</version>
+                            </path>
+                            <!-- Lombok 注解处理器 -->
+                            <path>
+                                <groupId>org.projectlombok</groupId>
+                                <artifactId>lombok</artifactId>
+                                <version>${lombok.version}</version>
+                            </path>
+                            <!-- MapStruct 和 Lombok 注解绑定处理器 -->
+                            <path>
+                                <groupId>org.projectlombok</groupId>
+                                <artifactId>lombok-mapstruct-binding</artifactId>
+                                <version>${lombok-mapstruct-binding.version}</version>
+                            </path>
+                        </annotationProcessorPaths>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
