--- a/mp-msg-acceptor/pom.xml
+++ b/mp-msg-acceptor/pom.xml
@@ -31,6 +31,10 @@
             <artifactId>mp-common-security</artifactId>
         </dependency>
         <dependency>
+            <groupId>cn.wtk</groupId>
+            <artifactId>mp-common-msg</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-stream-kafka</artifactId>
         </dependency>
