feature: msg 模块：接入 MQ 与消息发送，放弃 SCS，直接使用 kafka

--- a/mp-msg-acceptor/src/main/resources/bootstrap.yaml
+++ b/mp-msg-acceptor/src/main/resources/bootstrap.yaml
@@ -6,7 +6,7 @@ spring:
     active: dev
   # 项目配置
   application:
-    name: mp-msg-acceptor
+    name: mp-msgacceptor
   cloud:
     nacos:
       discovery:
