--- a/mp-msg-manager/src/main/resources/bootstrap.yaml
+++ b/mp-msg-manager/src/main/resources/bootstrap.yaml
@@ -6,7 +6,7 @@ spring:
     active: dev
   # 项目配置
   application:
-    name: mp-msg-manager
+    name: mp-msgmanager
   cloud:
     nacos:
       discovery:
