--- a/mp-client-test/src/main/resources/bootstrap.yaml
+++ b/mp-client-test/src/main/resources/bootstrap.yaml
@@ -23,3 +23,6 @@ spring:
           - mp-default-log-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
           - mp-default-cloud-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
           - mp-default-app-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
+mp:
+  client:
+    connector-id: 1
