feature: 添加日志 bugfix: 不能向自己发消息，消息不会推送给发送方

--- a/mp-msg-acceptor/src/main/resources/bootstrap.yaml
+++ b/mp-msg-acceptor/src/main/resources/bootstrap.yaml
@@ -23,3 +23,12 @@ spring:
           - mp-default-log-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
           - mp-default-cloud-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
           - mp-default-app-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
+logging:
+  level:
+    cn:
+      wtk:
+        mp:
+          msg:
+            acceptor:
+              domain:
+                acceptor: trace
